--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.2",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -24,8 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://saerom-hong/github.io/twitter-clone-project"
+  "homepage": "https://saerom-hong/github.io/twitter-clone-project",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
