--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "twitter-clone",
   "version": "0.1.0",
+  "homepage": "https://saerom-hong.github.io/twitter-clone-project",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -20,10 +21,11 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build&&gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
